<resources>
    <string name="app_name">TIketSaya</string>
    <string name="slogan">Wisata Jadi Lebih Asik</string>
    <string name="signin">Sign In</string>
    <string name="username_label">Username</string>
    <string name="name_label">Name</string>
    <string name="bio_label"> Your Passion?</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="explore">EXPLORE NOW</string>

</resources>
