<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".RegisterTwoAct">

    <ScrollView
        android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/bg_gradient_primary_blue"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mlight"
            android:text="Edit Profile"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mlight"
            android:text="We highly suggest you to \nuse the correct informations"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingTop="35dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/name_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp"


                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/BlackPrimary"


                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/bio_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp"


                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/BlackPrimary"


                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/username_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp"


                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/BlackPrimary"


                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/password_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp"


                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/BlackPrimary"


                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp"


                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/mmedium"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingLeft="12dp"
                    android:textColor="@color/BlackPrimary"


                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="108dp"
            android:layout_height="108dp"

            android:background="@drawable/bg_view_circle_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_nopic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

        <com.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/photo_edit_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/foto_ogi" />
        </com.github.florent37.shapeofview.shapes.CircleView>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_plus"
            android:fontFamily="@font/mmedium"
            android:text="+"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <Button
            android:id="@+id/btn_continue2"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_btn_blue_primary"
            android:fontFamily="@font/mmedium"
            android:text="SAVE PROFILE"
            android:textColor="#ffff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_btn_white_primary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_continue2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_back"

                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>